[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/Drawing-6.sketchpad.jpeg" type="Texture" id=1]
[ext_resource path="res://assets/play.png" type="Texture" id=2]
[ext_resource path="res://assets/title.png" type="Texture" id=3]
[ext_resource path="res://PlayButton.gd" type="Script" id=4]
[ext_resource path="res://assets/08. Oddlife.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/mixkit-wooden-ship-on-the-sea-1187.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/ship.png" type="Texture" id=7]
[ext_resource path="res://Ship.gd" type="Script" id=8]

[sub_resource type="Animation" id=1]
resource_name = "TitleFade"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 111.124, 81.9397 ), Vector2( 111.124, -300 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -154.322, 446.917, 0, 0, 0, 0, 19.2077, 486.962, 0, 0, 0, 0, 136.674, 486.962, 0, 0, 0, 0, 214.094, 446.917, 0, 0, 0, 0, 299.873, 437.309, 0, 0, 0, 0, 361.304, 434.312, 0, 0, 0, 0, 423.664, 454.926, 0, 0, 0, 0, 507.759, 523.003, 0, 0, 0, 0, 617.514, 536.197, 0, 0, 0, 0, 719.399, 512.224, 0, 0, 0, 0, 809.433, 486.962, 0, 0, 0, 0, 905.541, 432.234, 0, 0, 0, 0, 988.301, 408.207, 0, 0, 0, 0, 1049.7, 410.876, 0, 0, 0, 0, 1097.76, 417.55, 0, 0, 0, 0, 1168.5, 433.568, 0, 0, 0, 0, 1236.58, 458.93, 0, 0, 0, 0, 1296.65, 477.618 )
}

[node name="Node2D" type="Node2D"]

[node name="Background" type="TextureRect" parent="."]
margin_left = -25.5457
margin_top = -16.2275
margin_right = 3441.45
margin_bottom = 1998.77
rect_scale = Vector2( 0.321566, 0.328203 )
texture = ExtResource( 1 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="."]
margin_left = 111.124
margin_top = 81.9397
margin_right = 2502.12
margin_bottom = 540.94
rect_scale = Vector2( 0.337679, 0.427728 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title"]
anims/TitleFade = SubResource( 1 )

[node name="PlayButton" type="Button" parent="."]
margin_left = 411.182
margin_top = 233.185
margin_right = 423.182
margin_bottom = 253.185
rect_scale = Vector2( 0.5558, 0.51186 )
flat = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="PlayButton"]
margin_left = -40.0
margin_top = 136.0
margin_right = 460.0
margin_bottom = 659.0
rect_pivot_offset = Vector2( 251.111, 261.024 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayButton/TextureRect"]
anims/FadeButton = SubResource( 2 )

[node name="TitleMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -5.977
autoplay = true

[node name="WaveSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 3 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( -154.322, 446.917 )
rotation = 0.226789
rotate = false
loop = false

[node name="Ship" type="Sprite" parent="Path2D/PathFollow2D"]
modulate = Color( 0.807843, 0.788235, 0.729412, 1 )
position = Vector2( -15.5205, -92.7971 )
rotation = -0.226789
scale = Vector2( 0.280237, 0.232873 )
texture = ExtResource( 7 )
script = ExtResource( 8 )
[connection signal="pressed" from="PlayButton" to="PlayButton" method="_on_PlayButton_pressed"]
[connection signal="animation_finished" from="PlayButton/TextureRect/AnimationPlayer" to="PlayButton" method="_on_AnimationPlayer_animation_finished"]
